@@ -1,8 +1,8 @@
+AddMap("maps/map0.py")
 AddMap("maps/map1.py")
 AddMap("maps/map4.py")
 AddMap("maps/map5.py")
 AddMap("maps/map2.py")
 AddMap("maps/map3.py")
-AddMap("maps/map0.py")
 
 
